--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -66,7 +72,6 @@
             <version>1.18.6</version>
             <scope>provided</scope>
         </dependency>
-
 
     </dependencies>
 
