--- a/retsful-dms-api/src/main/resources/application-h2.yml
+++ b/retsful-dms-api/src/main/resources/application-h2.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     driverClassName: org.h2.Driver
     password: ''
-    url: jdbc:h2:mem:dms-dev;;INIT=RUNSCRIPT FROM 'classpath:sql/h2/V1.0__Init.sql';DB_CLOSE_DELAY=-1;
+    url: jdbc:h2:mem:dms-dev;INIT=RUNSCRIPT FROM 'classpath:sql/h2/V1.0__Init.sql';DB_CLOSE_DELAY=-1;
     username: sa
   h2:
     console:
