--- a/retsful-dms-api/pom.xml
+++ b/retsful-dms-api/pom.xml
@@ -91,17 +91,17 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.zalando/logbook-core -->
-        <dependency>
-            <groupId>org.zalando</groupId>
-            <artifactId>logbook-core</artifactId>
-            <version>1.13.0</version>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>org.zalando</groupId>-->
+        <!--<artifactId>logbook-core</artifactId>-->
+        <!--<version>1.13.0</version>-->
+        <!--</dependency>-->
 
-        <dependency>
-            <groupId>org.zalando</groupId>
-            <artifactId>logbook-spring-boot-starter</artifactId>
-            <version>1.13.0</version>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>org.zalando</groupId>-->
+        <!--<artifactId>logbook-spring-boot-starter</artifactId>-->
+        <!--<version>1.13.0</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>io.springfox</groupId>
