--- a/restful-dms-ui/package.json
+++ b/restful-dms-ui/package.json
@@ -28,6 +28,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ngx-toastr": "^10.0.2",
+    "rollbar": "^2.6.1",
     "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
